# azmq

./: CMakeLists.txt
doc/examples/: CMakeLists.txt
doc/examples/readme/: CMakeLists.txt  main.cpp
